
   - Change acquisition wrappers to implement the descr get slot
     directly, thus speeding the use of the slot.

   - Collector #1233: port ZOPE_CONFIG patch from Zope 2.7 to Zope 2.8


  after Zope 2.8.5 

    Bugs Fixed

      - Collector #1999: fixed broken FTP rename functionality
        (RNFR now returns 350 as status code instead 250)


  Zope 2.8.5 (2005/12/19)

    Bugs Fixed

      - Collector #1939: When running as a service, Zope could
        potentially collect too much log output filling the NT Event
        Log. When that happened, a 'print' during exception handling
        would cause an IOError in the restart code causing the service
        not to restart automatically.

        Problem is that a service/pythonw.exe process *always* has an
        invalid sys.stdout.  But due to the magic of buffering, small
        "print" statements would not fail - but once the file actually
        got written to, the error happened.  Never a problem when
        debugging, as the process has a console, and hence a valid
        stdout.

      - Collector #1976: FTP STOR command would load the file being
        uploaded in memory. Changed to use a TemporaryFile.

      - Collector #1904: On Mac OS X avoid a spurious OSError when
        zopectl exits.

      - CopySupport: Reverted workaround in '_verifyObjectPaste'.
        'checkPermission' now respects proxy roles, so the warkaround
        introduced to fix http://www.zope.org/Collectors/Zope/78 is no longer
        needed. Meta types listed in all_meta_types need a 'permission' key.

      - Collector #1774:  Harmonize the implementation of
        AccessControl.ZopeSecurityPolicy.checkPermission
        with 'validate', checking ownership and proxy roles if an
        executable object is on the stack.

      - AccessControl.SecurityInfo: Fixed problem with
        setPermissionDefault when the permission wasn't used anywhere
        else in the class to protect methods.
